# flakehound

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: GROWTH.md  benchmarks.md  rules.md
scripts/: gen_rules_doc.py
src/flakehound/: __init__.py  cli.py  config.py  plugin.py  scanner.py
src/flakehound/rules/: __init__.py  _imports.py  base.py  g10_event_loop_misuse.py  g1_global_seed.py  g3_sleep_in_test.py  g4_naive_now.py  g5_shared_state_fixture.py  g6_import_time_side_effects.py  g7_unmocked_network.py  g8_float_equality.py  g9_hardcoded_tmp_paths.py  m1_unseeded_stochastic_assert.py  m2_jax_prngkey_reuse.py  m3_suspicious_tolerance.py  m4_missing_determinism_flags.py  m5_module_scope_jit.py
tests/: test_g10_event_loop_misuse.py  test_g1_global_seed.py  test_g3_sleep_in_test.py  test_g4_naive_now.py  test_g5_shared_state_fixture.py  test_g6_import_time_side_effects.py  test_g7_unmocked_network.py  test_g8_float_equality.py  test_g9_hardcoded_tmp_paths.py  test_imports_helper.py  test_m1_unseeded_stochastic_assert.py  test_m2_jax_prngkey_reuse.py  test_m3_suspicious_tolerance.py  test_m4_missing_determinism_flags.py  test_m5_module_scope_jit.py  test_plugin.py  test_scanner.py  test_smoke.py
